--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -19,7 +19,6 @@ jobs:
       packages: write
     env:
       REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -37,7 +36,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tags.outputs.dev }}
+          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          tags: |
+            type=ref,prefix=dev-,event=branch
       - name: Build and push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
