--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,21 +1,14 @@
-name: dev
+name: tag
 on:
   push:
-    branches:
-    - main
+    tags:
+    - 'v*'
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Run Go tests
-        run: go test ./...
-  docker:
+  publish:
     needs: test
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     env:
       REGISTRY: ghcr.io
@@ -24,6 +17,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Building
         run: ./scripts/build.sh
+      - name: Release
+        uses: softprops/action-gh-release@fe9a9bd3295828558c7a3c004f23f3bf77d155b2
+        with:
+          files: |
+            tmp/build/*
       - name: Log in to registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -36,7 +34,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}
           tags: |
-            type=ref,prefix=dev-,event=branch
+            type=semver,pattern=v{{major}}.{{minor}}.{{patch}}
+            type=semver,pattern=v{{major}}.{{minor}}
+            type=semver,pattern=v{{major}}
       - name: Build and push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
