--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.17'
       - name: Run Go tests
         run: go test ./...
   docker:
@@ -22,6 +25,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.17'
       - name: Building
         run: ./scripts/build.sh
       - name: Log in to registry
