--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: '1.17'
       - name: Building
-        run: ./scripts/build.sh
+        run: ./scripts/build.sh ${GITHUB_REF#$"refs/tags/v"}
       - name: Release
         uses: softprops/action-gh-release@fe9a9bd3295828558c7a3c004f23f3bf77d155b2
         with:
