publish with release notes, checksums

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@fe9a9bd3295828558c7a3c004f23f3bf77d155b2
         with:
+          body_path: tmp/build-notes.md
           files: |
             tmp/build/*
       - name: Log in to registry
